# rackety

./: Cargo.toml  README.md
.github/: FUNDING.yml
ahk/: taskbar.ahk
sciter/css/: about.css  main.css  tray-menu.css
sciter/html/: about.html  main.html
sciter/js/: about.js  main.js
src/: main.rs
